observabilidade/kubernetes/nginx/alertmanager-externalservice copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
spec:
  type: ExternalName
  externalName: my-prometheus-alertmanager.prometheus.svc.cluster.local
