observabilidade/kubernetes/nginx/api-externalservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ExternalName
  externalName: api-pedelogo-service.back-end.svc.cluster.local
