observabilidade/kubernetes/nginx/jaeger-externalservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
spec:
  type: ExternalName
  externalName: jaeger-query.jaeger.svc.cluster.local
