observabilidade/kubernetes/nginx/nginx-externalservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ExternalName
  externalName: nginx-service.back-end.svc.cluster.local
