observabilidade/kubernetes/nginx/prometheus-externalservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  type: ExternalName
  externalName: my-prometheus-server.prometheus.svc.cluster.local
