observabilidade/kubernetes/nginx/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - k8s.confrariadocodigotecnologia.com
        - api.confrariadocodigotecnologia.com
        - prometheus.confrariadocodigotecnologia.com
        - alert.confrariadocodigotecnologia.com
        - tracing.confrariadocodigotecnologia.com

      secretName: confrariadocodigotecnologia-com-secret
  rules:
    - host: k8s.confrariadocodigotecnologia.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

    - host: api.confrariadocodigotecnologia.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-service
                port:
                  number: 8055

    - host: prometheus.confrariadocodigotecnologia.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-service
                port:
                  number: 80

    - host: alert.confrariadocodigotecnologia.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: alertmanager-service
                port:
                  number: 80

    - host: tracing.confrariadocodigotecnologia.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jaeger-service
                port:
                  number: 80
